[package]
name = "Serial-Capture-Rust"
version = "0.1.0"
authors = ["JSchiltz19 <johnschiltz2000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#serde = { verson = "1", features = ["derive"] }
structopt = "0.3"
#clap = "2.33.3" #Command line argument parser
dialoguer = "0.7" #Command line prompts and menues etc
console = "0.14"
enum-iterator = "0.6"
