[package]
name = "Serial-Capture-Rust"
version = "0.1.0"
authors = ["JSchiltz19 <johnschiltz2000@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#serde = { verson = "1", features = ["derive"] }
structopt = "0.3.26"
clap = "4" #Command line argument parser
dialoguer = "0.10.4" #Command line prompts and menues etc
console = "0.15.5"
clap-verbosity-flag = "2.0.1"
simplelog = "0.12.1"
strum = "0.24.1"
strum_macros = "0.24.3"
log = "0.4.17"
